<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:fitsSystemWindows="true"
    android:id="@+id/poptag"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_eidt_wechat"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editview"
            android:maxLength="40"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/seex_editwechat"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:id="@+id/button_1"
            android:background="@drawable/seex_green_box"
            android:text="选取礼物"/>
        <Button
            android:layout_width="wrap_content"
            android:text="确认出售"
            android:id="@+id/button_2"
            android:layout_marginLeft="30dp"
            android:background="@drawable/seex_green_box"
            android:layout_height="40dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/setting_14"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/back_text"
                android:text="@string/seex_wechat_waring" />
            <TextView
                style="@style/text_more18"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/seex_wechat_step_str" />

            <TextView
                style="@style/setting_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/seex_wechat_step_info_str"
                android:textColor="@color/back_text" />
        </LinearLayout>
        <TextView
            style="@style/setting_14"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:gravity="center"
            android:text="@string/seex_wechat_contion_str" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>
</LinearLayout>