<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="#909ff0"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="#909ff0"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="25dp"
                        android:gravity="center">

                        <LinearLayout
                            android:background="@color/white"
                            android:layout_width="200dp"
                            android:layout_weight="1"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_height="match_parent">

                            <RelativeLayout
                                android:layout_width="200dp"
                                android:id="@+id/startview"
                                android:layout_height="200dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/bgVideoview"/>
                                <ImageView
                                    android:id="@+id/user_head"
                                    android:layout_width="200dp"
                                    android:layout_height="200dp"
                                    android:layout_centerInParent="true"
                                    android:layout_centerVertical="true"
                                    android:scaleType="center"
                                    android:src="@mipmap/icon_start_video_def" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:text="上传视频"
                                    android:gravity="center"
                                    android:layout_alignParentBottom="true"
                                    android:background="@drawable/image_gay_bg"
                                    style="@style/text_white16"/>
                            </RelativeLayout>

                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginRight="26dp"
                        android:id="@+id/t1"
                        android:layout_marginTop="25dp"
                        android:text="@string/seex_video_take_care"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:layout_marginRight="26dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/seex_video_take_care_info"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="16sp" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="22dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="98dp"
                            android:layout_height="34dp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:background="@drawable/auth_video_right_bg"
                            android:text="@string/seex_wx_nmb" />

                        <TextView
                            android:layout_width="98dp"
                            android:layout_height="34dp"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:id="@+id/copy_right"
                            android:background="@drawable/auth_video_left_bg"
                            android:text="@string/seex_onclick_copy" />
                    </LinearLayout>

                </LinearLayout>
                <Button
                    android:layout_width="198dp"
                    android:layout_height="44dp"
                    android:id="@+id/btn"
                    android:background="@drawable/auth_start_video_bg"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="21dp"
                    android:layout_marginBottom="21dp"
                    android:text="@string/seex_onclick_put_check"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>